--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,16 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   velocity_x: ^4.1.0
-  chat_gpt_sdk: ^2.1.7
-#  chat_gpt_sdk:
-#    git:
-#      url: https://github.com/iampawan/flutter-chatGPT
+  chat_gpt_sdk: 2.1.7
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
