--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   velocity_x: ^4.1.0
   chat_gpt_sdk: 2.1.7
   http: ^1.0.0
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
@@ -55,8 +56,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/gpt.png
-    - images/person.png
+    - images/
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
