--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   chat_gpt_sdk: 2.1.7
   http: ^1.0.0
   flutter_spinkit: ^5.2.0
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
